@@ -45,6 +45,7 @@
 
  Other changes:
 
+   - ofaIDBProvider: all methods get an instance argument (todo #1065).
    - ofaIExeCloseClose interface is renamed to ofaIExeClose (todo #1067).
    - ofaIPrefsProvider, ofaIPrefsPage: deprecated interfaces.
    - ofaIProperties: new interface which obsoletes both ofaIPrefsProvider and ofaIPrefsPage.
